--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <title>Nuestra Web</title>
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600" rel="stylesheet">
+    <title>TeamApp!</title>
   </head>
   <body>
-
+    <header>
+      <nav>
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </nav>
+      <!--
+      <nav>
+        <ul>
+          <li><a href="#">Ayuda</a></li>
+          <li><a href="#">Ofrecé una cancha</a></li>
+          <li><a href="#">Organizá un Partido</a></li>
+          <li><a href="#">Descargar</a></li>
+          <li><a href="#">Registrate</a></li>
+          <li><a href="#">Iniciar Sesión</a></li>
+          <div class="logo-menu"><img src="images/logo-menu.png" alt="logo"></div>
+        </ul>
+      </nav>
+      -->
+    </header>
+    <div class="container">
+      <section>
+        <div class="encabezado">
+          <img class="logo" src="images/logo-home.png" alt="logo">
+          <div class="container caption">Registrate para encontrar un equipo o una cancha</div>
+        </div>
+      </section>
+      <section class="buscador btn-hollow">
+        <div>
+          <a href="">Buscador de Equipos</a>
+        </div>
+        <div class="buscador-dropdown">
+          <ul>
+            <li><a href="">Cualquier deporte</a></li>
+            <li><a href="">Cualquier lugar</a></li>
+            <li><a href="">En cualquier momento</a></li>
+            <li><a href="">1 integrante</a></li>
+          </ul>
+        </div>
+      </section>
+      <div class="container">
+        <img class="deporte" src="images/futbol-th.jpg" alt="futbol">
+      </div>
+    </div>
   </body>
 </html>
