--- a/registro.html
+++ b/registro.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <title>Nuestra Web</title>
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600" rel="stylesheet">
+    <title>TeamApp!</title>
   </head>
   <body>
-
+    <header>
+      <nav>
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </nav>
+    </header>
   </body>
 </html>
