Edite FAQ, agregue boton FAQ en Index, agregue alguna clase a CSS

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <div class="container">
         <img class="deporte" src="images/futbol-th.jpg" alt="futbol">
       </div>
+      <div><a href="faq.html">FAQ's</a></div>
     </div>
   </body>
 </html>
