--- a/faq.html
+++ b/faq.html
@@ -13,6 +13,28 @@
       <nav>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </nav>
+      <div class="encabezado">
+        <img class="logo" src="images/logo-home.png" alt="logo">
+        <div class="container caption"><h1>Preguntas Frecuentes</h1></div>
+      </div>
     </header>
+    <div class="faq-container">
+
+
+    <div>
+        <img src="images/futbol-th.jpg" alt="equipo de futbol">
+    </div>    
+
+      <div class="faq-box">
+          <h2 class="caption">
+          ¿Lorem ipsum dolor sit amet?
+          </h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
+
+      </div>
+
+
+
+
   </body>
 </html>
