--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600" rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <title>TeamApp!</title>
   </head>
   <body>
@@ -19,22 +20,92 @@
       </div>
     </header>
     <div class="faq-container">
+      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel panel-default">
+      <div class="panel-heading" role="tab" id="headingOne">
+        <h4 class="panel-title">
+          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            ¿Qué es TEAMAPP! ?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+        <div class="panel-body">
+          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading" role="tab" id="headingTwo">
+        <h4 class="panel-title">
+          <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            ¿Qué puedo hacer con TEAMAPP!?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+        <div class="panel-body">
+          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading" role="tab" id="headingThree">
+        <h4 class="panel-title">
+          <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            ¿Cómo creo un partido?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+        <div class="panel-body">
+          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        </div>
+      </div>
+    </div>
+  </div>
 
-
-    <div>
+    <!--<div class="container">
+      <div>
         <img src="images/futbol-th.jpg" alt="equipo de futbol">
-    </div>    
+      </div>
 
       <div class="faq-box">
           <h2 class="caption">
           ¿Lorem ipsum dolor sit amet?
           </h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
-
       </div>
+      <div class="faq-box">
+          <h2 class="caption">
+          ¿Lorem ipsum dolor sit amet?
+          </h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
+      </div>
+      <div class="faq-box">
+          <h2 class="caption">
+          ¿Lorem ipsum dolor sit amet?
+          </h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
+      </div>
+      <div class="faq-box">
+          <h2 class="caption">
+          ¿Lorem ipsum dolor sit amet?
+          </h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
+      </div>
+      <div class="faq-box">
+          <h2 class="caption">
+          ¿Lorem ipsum dolor sit amet?
+          </h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
+      </div>
+    </div>-->
 
 
-
-
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+     <!-- Include all compiled plugins (below), or include individual files as needed -->
+     <script src="bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
