--- a/login.html
+++ b/login.html
@@ -13,6 +13,23 @@
       <nav>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </nav>
+        <div class="container">
+            <div class="encabezado">
+              <img class="logo" src="images/logo-home.png" alt="logo">
+              <div class="caption">INICIA SESION CON FACEBOOK</div>
+            </div>
+        </div><br>
     </header>
+    <div class="loginContainer">
+      <p>o</p><br><br>
+      <input type="text" name="email" id="email" placeholder="e-mail"required><br><br>
+      <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña"required><br><br>
+      <input type="checkbox" name="" value="recordame">Recúerdame</p><br><br><br>
+      <button type="submit" name="iniciarSesion" id="iniciarSesion">INICIAR SESION</button><br><br><br>
+      <p>¿Olvidaste tu nombre de usuario o contraseña?<br>
+      ¿No tienes cuenta? <a href="registro.html">Regístrate</a>
+    </p><br><br><br>
+    <p>Si haces click en "Acceder con Facebook" y no eres usuario de TEAMAPP, quedarás registrado y aceptarás los  <a href="#"> Términos y Condiciones</a> y <a href="#"> Política de Privacidad</a> de TEAMAPP!</p>
+    </div>
   </body>
 </html>
