--- a/registro.html
+++ b/registro.html
@@ -12,22 +12,26 @@
 <body>
 <!--Header-->
     <header>
+      <nav>
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </nav>
       <div class="container">
           <div class="encabezado">
             <img class="logo" src="images/logo-home.png" alt="logo">
-            <div class="caption">Regístrate</div>
+            <div class="caption">REGISTRATE CON FACEBOOK</div>
           </div>
       </div><br>
     </header>
 <!--campos de registro obligatorios-->
+<P>O</P><br><br>
 <form id="registro" method="post" class="">
   <div class="regDatosObligatorios">
     <input type="text" name="nombreyapellido" id="nombreApellido" placeholder="Nombre y Apellido"required><br><br>
-    <input type="text" name="email" id="email" placeholder="E-mail"required><br><br>
+    <input type="text" name="email" id="email" placeholder="e-mail"required><br><br>
     <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña"required><br><br>
-    <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña"required><br><br><br>
-    <input type="checkbox" name="" value="Compartir mis datos de registro con los proveedores de contenido de TeamApp para fines de marketing">Compartir mis datos de registro con los proveedores de contenido de TeamApp para fines de marketing<br><br><br><br>
-    <p> Si haces click en "Crear Cuenta" aceptarás los <a href="#"> Términos y Condiciones</a> y <a href="#"> Política de Privacidad</a> de teamApp </p><br><br><br>
+    <input type="password" name="contraseña" id="contraseña" placeholder="Repetir Contraseña"required><br><br><br>
+    <input type="checkbox" name="" value="Compartir mis datos de registro con los proveedores de contenido de TeamApp para fines de marketing"> Compartir mis datos de registro con los proveedores de contenido de TEAMAPP para fines de marketing.<br><br><br><br>
+    <p> Si haces click en "Regístrate" aceptarás los <a href="#"> Términos y Condiciones</a> y <a href="#"> Política de Privacidad</a> de TEAMAPP </p><br><br><br>
   </div>
 <!--Otros Campos de registro
 <div class="regInfoPersonal"
@@ -69,9 +73,9 @@
       <input type="checkbox" name="Softball" value="Softball"> Softball<br>
   </div>
   </fieldset><br>--->
-    <button type="submit" name="submit" id="submit">Crear Cuenta</button><br><br><br>
-    <p>Ya tenés cuenta?
-    <a href="login.html">Iniciá Sesión</a>
+    <button type="submit" name="submit" id="submit">Regístrate</button><br><br><br>
+    <p>¿Ya tienes cuenta?
+    <a href="login.html">Inicia Sesión</a>
   </p>
 </form>
 </body>
