FAQ edit: contenido, boton VOLVER, comentarios en el codigo

--- a/faq.html
+++ b/faq.html
@@ -10,97 +10,102 @@
     <title>TeamApp!</title>
   </head>
   <body>
+    <!--HEADER-->
     <header>
       <nav>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </nav>
       <div class="encabezado">
+        <a href="index.html" class="back">Volver</a>
         <img class="logo" src="images/logo-home.png" alt="logo">
         <div class="container caption"><h1>Preguntas Frecuentes</h1></div>
       </div>
     </header>
+    <!--PREGUNTAS DESPLEGABLES-->
     <div class="faq-container">
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <!--PREGUNTA #1-->
     <div class="panel panel-default">
       <div class="panel-heading" role="tab" id="headingOne">
         <h4 class="panel-title">
           <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            ¿Qué es TEAMAPP! ?
+            ¿Qué es TEAMAPP?
           </a>
         </h4>
       </div>
       <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
         <div class="panel-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          TEAMAPP es una plataforma pensada para conectar jugadores con equipos, y equipos con canchas.<br/> ¿Viste esa vez que te agarraron ganas de jugar <i>badminton</i> y no se te ocurrió con quién? Encontra equipos de todos los deportes en TEAMAPP!
         </div>
       </div>
     </div>
+    <!--PREGUNTA #2-->
     <div class="panel panel-default">
       <div class="panel-heading" role="tab" id="headingTwo">
         <h4 class="panel-title">
           <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            ¿Qué puedo hacer con TEAMAPP!?
+            ¿Qué puedo hacer con TEAMAPP?
           </a>
         </h4>
       </div>
       <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
         <div class="panel-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+           Contactá equipos que buscan jugadores, creá un equipo y encontrá los jugadores que te faltan u ofrecé tu cancha a esos equipos que buscan donde jugar.
+          <br>
+
         </div>
       </div>
     </div>
+    <!--PREGUNTA #3-->
     <div class="panel panel-default">
       <div class="panel-heading" role="tab" id="headingThree">
         <h4 class="panel-title">
           <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            ¿Cómo creo un partido?
+            ¿Cómo me sumo a un equipo?
           </a>
         </h4>
       </div>
       <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
         <div class="panel-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            En TEAMAPP vas a poder buscar equipos del deporte que te interesa según la zona, la fecha y franja horaria en que quieras jugar y de acuerdo a tu nivel. Sumarte a un equipo/partido es un compromiso de asistencia. Acordate que el administrador del equipo te puede dejar una review; anda con buena onda ;-) !
+
+        </div>
+      </div>
+    </div>
+    <!--PREGUNTA #4-->
+    <div class="panel panel-default">
+      <div class="panel-heading" role="tab" id="headingThree">
+        <h4 class="panel-title">
+          <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+            ¿Cómo creo un equipo?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+        <div class="panel-body">
+          Creá tu equipo con fecha flexible o con fecha específica, contanos cuántos te faltan, en qué zona juegan y conocé a tus próximos compañeros de equipo. <br>
+          Organizá un partido con otro equipo y hacé la reserva directa de la cancha en la que vas a jugar.
+        </div>
+      </div>
+    </div>
+    <!--PREGUNTA #5-->
+    <div class="panel panel-default">
+      <div class="panel-heading" role="tab" id="headingThree">
+        <h4 class="panel-title">
+          <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            Tengo una cancha, ¿puedo ofrecerla?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+        <div class="panel-body">
+          Totalmente! Animate a publicar tus horarios vacantes y TEAMAPP te contactará con los equipos que quieren jugar.
         </div>
       </div>
     </div>
   </div>
 
-    <!--<div class="container">
-      <div>
-        <img src="images/futbol-th.jpg" alt="equipo de futbol">
-      </div>
-
-      <div class="faq-box">
-          <h2 class="caption">
-          ¿Lorem ipsum dolor sit amet?
-          </h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
-      </div>
-      <div class="faq-box">
-          <h2 class="caption">
-          ¿Lorem ipsum dolor sit amet?
-          </h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
-      </div>
-      <div class="faq-box">
-          <h2 class="caption">
-          ¿Lorem ipsum dolor sit amet?
-          </h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
-      </div>
-      <div class="faq-box">
-          <h2 class="caption">
-          ¿Lorem ipsum dolor sit amet?
-          </h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
-      </div>
-      <div class="faq-box">
-          <h2 class="caption">
-          ¿Lorem ipsum dolor sit amet?
-          </h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo quasi inventore, ipsa quis, deleniti ducimus esse architecto aperiam natus velit eum a quaerat minus ullam nihil assumenda. Vel, doloremque, quas!</p>
-      </div>
-    </div>-->
+</div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
