--- a/registro.html
+++ b/registro.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600" rel="stylesheet">
-    <title>Formulario de Registro de Cliente</title>
+    <title>Registrate</title>
   </head>
 <body>
 <!--Header-->
@@ -18,7 +18,7 @@
       <div class="container">
           <div class="encabezado">
             <img class="logo" src="images/logo-home.png" alt="logo">
-            <div class="caption">REGISTRATE CON FACEBOOK</div>
+            <div class="caption" >REGISTRATE CON FACEBOOK</div>
           </div>
       </div><br>
     </header>
