Centré formulario de Registro

--- a/registro.html
+++ b/registro.html
@@ -24,15 +24,21 @@
     </header>
 <!--campos de registro obligatorios-->
 <P>O</P><br><br>
-<form id="registro" method="post" class="">
-  <div class="regDatosObligatorios">
-    <input type="text" name="nombreyapellido" id="nombreApellido" placeholder="Nombre y Apellido"required><br><br>
-    <input type="text" name="email" id="email" placeholder="e-mail"required><br><br>
-    <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña"required><br><br>
-    <input type="password" name="contraseña" id="contraseña" placeholder="Repetir Contraseña"required><br><br><br>
-    <input type="checkbox" name="" value="Compartir mis datos de registro con los proveedores de contenido de TeamApp para fines de marketing"> Compartir mis datos de registro con los proveedores de contenido de TEAMAPP para fines de marketing.<br><br><br><br>
-    <p> Si haces click en "Regístrate" aceptarás los <a href="#"> Términos y Condiciones</a> y <a href="#"> Política de Privacidad</a> de TEAMAPP </p><br><br><br>
-  </div>
+  <div class="container">
+
+    <form id="registro" method="post" class="panel">
+      <div class="regDatosObligatorios">
+        <input type="text" name="nombreyapellido" id="nombreApellido" placeholder="Nombre y Apellido"required><br><br>
+        <input type="text" name="email" id="email" placeholder="e-mail"required><br><br>
+        <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña"required><br><br>
+        <input type="password" name="contraseña" id="contraseña" placeholder="Repetir Contraseña"required><br><br><br>
+
+        <div class="">
+          <input type="checkbox" name="" value="Compartir mis datos de registro con los proveedores de contenido de TeamApp para fines de marketing"> Compartir mis datos de registro con los proveedores de contenido de TEAMAPP para fines de marketing.<br><br><br><br>
+          <p> Si haces click en "Regístrate" aceptarás los <a href="#"> Términos y Condiciones</a> y <a href="#"> Política de Privacidad</a> de TEAMAPP </p><br><br><br>
+        </div>
+      </div>
+
 <!--Otros Campos de registro
 <div class="regInfoPersonal"
   <label for="cumple">Fecha de Nacimiento: </label>
@@ -73,10 +79,11 @@
       <input type="checkbox" name="Softball" value="Softball"> Softball<br>
   </div>
   </fieldset><br>--->
-    <button type="submit" name="submit" id="submit">Regístrate</button><br><br><br>
-    <p>¿Ya tienes cuenta?
-    <a href="login.html">Inicia Sesión</a>
-  </p>
-</form>
+        <button type="submit" name="submit" id="submit">Regístrate</button><br><br><br>
+        <p>¿Ya tienes cuenta?
+        <a href="login.html">Inicia Sesión</a>
+      </p>
+    </form>
+  </div>
 </body>
 </html>
