Agregue BTN FBK a Registro, edité algunas clases del CSS

--- a/registro.html
+++ b/registro.html
@@ -18,13 +18,18 @@
       <div class="container">
           <div class="encabezado">
             <img class="logo" src="images/logo-home.png" alt="logo">
-            <div class="caption" >REGISTRATE CON FACEBOOK</div>
+
           </div>
       </div><br>
     </header>
 <!--campos de registro obligatorios-->
-<P>O</P><br><br>
-  <div class="container">
+<br><br>
+  <div class="container border-body">
+    <div class="loginBtn-cont" >
+      <button class="loginBtn loginBtn--facebook">
+        Conectate con Facebook
+      </button>
+    </div>
 
     <form id="registro" method="post" class="panel">
       <div class="regDatosObligatorios">
