--- a/index.html
+++ b/index.html
@@ -6,33 +6,97 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600" rel="stylesheet">
-    <title>TeamApp!</title>
+    <title>TeamUp!</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <i class="fa fa-bars" aria-hidden="true"></i>
-      </nav>
-      <!--
-      <nav>
-        <ul>
-          <li><a href="#">Ayuda</a></li>
-          <li><a href="#">Ofrecé una cancha</a></li>
-          <li><a href="#">Organizá un Partido</a></li>
-          <li><a href="#">Descargar</a></li>
-          <li><a href="#">Registrate</a></li>
-          <li><a href="#">Iniciar Sesión</a></li>
-          <div class="logo-menu"><img src="images/logo-menu.png" alt="logo"></div>
-        </ul>
-      </nav>
-      -->
-    </header>
+      <header>
+        <div class="container">
+        <nav>
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </nav>
+        <!--
+        <nav>
+          <ul>
+            <li><a href="#">Ayuda</a></li>
+            <li><a href="#">Ofrecé una cancha</a></li>
+            <li><a href="#">Organizá un Partido</a></li>
+            <li><a href="#">Descargar</a></li>
+            <li><a href="#">Registrate</a></li>
+            <li><a href="#"><Iniciar></Iniciar> Sesión</a></li>
+            <div class="logo-menu"><img src="images/logo-menu.png" alt="logo"></div>
+          </ul>
+        </nav>
+        -->
+        </div>
+      </header>
+
     <div class="container">
         <div class="encabezado">
-          <img class="logo" src="images/logo-home.png" alt="logo">
-          <div class="caption">Registrate para encontrar un equipo o una cancha</div>
+          <h1>
+          <img class="logo" src="images/logo-home.png" alt="logo TeamUp!" >
+          </h1>
         </div>
-      <section class="buscador btn-hollow">
+
+    <div class="container">
+      <img src="images/hockey-home.jpg" alt="Foto de Home">
+      <div>
+        <div><h2>Estás a un click de empezar a jugar</h2>
+        </div>
+        <div>
+          <button type="button"> REGISTRATE
+          </button>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container">
+      <h2>Buscador de Partidos</h2>
+      <form action="#">
+        <select name="deporte" placeholder="Deporte">
+          <option value="xDeporte">Cualquier Deporte</option>
+          <option value="baseball">Baseball</option>
+          <option value="basket">Basket</option>
+          <option value="floorball">Floorball</option>
+          <option value="futbol">Futbol</option>
+          <option value="futbolAme">Futbol Americano</option>
+          <option value="handball">Handball</option>
+          <option value="hockey">Hockey</option>
+          <option value="padel">Padel</option>
+          <option value="paintball">Paintball</option>
+          <option value="polo">Polo</option>
+          <option value="rugby">Rugby</option>
+          <option value="softball">Softball</option>
+          <option value="squash">Squash</option>
+          <option value="tenis">Tenis</option>
+          <option value="voley">Voley</option>
+          <option value="waterpolo">Waterpolo</option>
+        </select>
+        <select name="zona" id="" placeholder="Zona">
+          <option value="xZona">Cualquier Zona</option>
+          <option value="capFed">Capital Federal</option>
+          <option value="bsasNorte">BsAs - Zona Norte</option>
+          <option value="bsasOesta">BsAs - Zona Oesta</option>
+          <option value="bsasSur">BsAs - Zona Sur</option>
+          <option value="cordoba">Cordoba</option>
+          <option value="mdq">Mar del Plata</option>
+          <option value="rosario">Rosario</option>
+        </select>
+        <select name="fecha" id="">
+          <option value="xFecha">Cualquier Fecha</option>
+          <option value="semana">Esta Semana</option>
+          <option value="quincena">Próximos 15 días</option>
+          <option value="mes">Próximo Mes</option>
+          <option value="trimes">Próximos 3 Meses</option>
+          <option value="medioAno">Próximos 6 Meses</option>
+        </select>
+        <button type="submit" name="buscar">Buscar!</button>
+
+      </form>
+
+
+    </div>
+      <!--<section class="buscador btn-hollow">
         <div>
           <a href="">Buscador de Equipos</a>
         </div>
@@ -44,19 +108,24 @@
             <li><a href="">1 integrante</a></li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <div class="container">
-        <h2>Experiencias</h2>
+        <div>
+          <h2>Partidos por Completarse</h2>
+        </div>
         <div class="deporte">
+          <h3>Hockey</h3>
+          <h6>Belgrano - Miercoles 20hs</h6>
           <img src="images/futbol-th.jpg" alt="futbol">
+
+        </div>
+        <div class="deporte">
           <h3>Rugby</h3>
-          <h6>Y acá tenemos un lindo pero cortito texto simulado que no dice nada en particular, pero podría"</h6>
-        </div>
-        <div class="deporte">
+          <h6>El Palomar - Jueves 19:30hs</h6>
           <img src="images/futbol-th.jpg" alt="futbol">
-          <h3>Footbal</h3>
-          <h6>Y acá tenemos un lindo pero cortito texto simulado que no dice nada en particular, pero podría"</h6>
+
         </div>
+
       </div>
       <div><a href="faq.html">FAQ's</a></div>
     </div>
